<resources>
    <string name="app_name">QueimaAqui</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_login">Already Registered, Login</string>
    <string name="nome_de_utilizador">Nome de Utilizador</string>
    <string name="registar">Registar</string>
    <string name="anular">Anular</string>
    <string name="continuar">Continuar</string>
    <string name="registado_com_sucesso">Registado com Sucesso!</string>
</resources>